--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,9 +6,9 @@
     <a class="nav-link" routerLink="edit" routerLinkActive="active">Edit</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" >SignIn</a>
+    <a class="nav-link" routerLink="signin" routerLinkActive="active">SignIn</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">SignUp</a>
+    <a class="nav-link" routerLink="signup" routerLinkActive="active">SignUp</a>
   </li>
 </ul>
