--- a/src/app/game/user-details/user-details.component.html
+++ b/src/app/game/user-details/user-details.component.html
@@ -1,7 +1,7 @@
 <div class="square">
  <div class="font-weight-bold font-italic center" style="font-size: 20px;">
-   <label > User Name: Netanel Rada</label>
+   <label > User Name: {{userName}}</label>
    <label> Time: {{timePast | minutesandsecondes}} </label>
-   <label> User Name: Netanel Rada</label>
+   <p><label> Record: {{recordUser | minutesandsecondes}} </label></p> 
 </div>
 </div>
